- UPS Shipping module now allows you to box products together into 1 container
- Add a new config for the persistent cart to provide more options for how it handles returning users
- New template tag to show tiered shipping pricing table
- Control product variations inclusion in searching view the settings
- UPS module will display actual shipping times
- New template tag product_featured_list

Translations
------------
- Added Dutch translation
- Added Czech translation

Bug Fixes
---------
- Fix issue if Unicode characters in options
- Fix issues with migrations and content types
- Resolve Paypal unneeded dependency on subscription product
- Make sure "all valid" discounts are correctly applied
- Fix Wishlish ajax add view
- Ensure that product variation properly inherits shipping from its parent
- Handling of gift certificate plus other payments fixed
- Bug in tax processor rendering fixed
- Bug in autosuccess payment module fixed
- Rebuild pricing was deleting prices if multiple sites were being used
- Currency template tags handles decimal places parameter correctly
- Improve robustness of South migrations
- Fix obscure issue where some users were able to edit the wrong information
- Remove custom read only widget use and use Django's newer read only field
- Paypal was not saving contact information correctly in certain cases
- Newsletter subscription status could be lost when checking out
- Use smart_attr for tiered weight shipping module
- Make sure that the product image file name doesn't exceed the length of the file field
- Multiple doc formatting fixes
- Authorize.net now uses shipee first and last names if given
- Typo in wishlist ajax view
- Make sure jquery correctly shows error messages on product pages
- Fixed problem where category caching was not handling translations correctly
- Ensure Ajax calls in checkout use SSL if it is turned on
- Akismet for comment moderation is fixed
- Improvements to South migrations
- Update Paypal IPN docs