@@ -68,6 +68,13 @@ ACCOUNT_VERIFICATION = config_register(StringValue(SHOP_GROUP,
     choices=[('IMMEDIATE', _('Immediate')),
              ('EMAIL', _('Email'))]
     ))
+config_register(
+    BooleanValue(SHOP_GROUP,
+    'ALLOW_NICKNAME_USERNAME',
+    description=_("Nickname-Registration"),
+    help_text=_("If checked a user will be able to fill in an individual Nickname-Username at Account-Registration"),
+    default=False)
+)
 
 config_register(
     IntegerValue(SHOP_GROUP,
