@@ -20,6 +20,7 @@ New Features
 - Control product variations inclusion in searching view the settings
 - UPS module will display actual shipping times
 - New template tag product_featured_list
+- New config option to allow users to create their username instead of automatically generating
 
 Translations
 ------------
